--- a/rpt/PharmaceuticalOrder.jrxml
+++ b/rpt/PharmaceuticalOrder.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.14.0.final using JasperReports Library version 6.14.0-2ab0d8625be255bf609c78e1181801213e51db8f  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="PharmaceuticalOrder" pageWidth="595" pageHeight="842" whenNoDataType="NoPages" columnWidth="535" leftMargin="30" rightMargin="30" topMargin="20" bottomMargin="20" isFloatColumnFooter="true" uuid="c2ba327f-8236-47da-8bc7-e78075a71b3f">
+<!-- Created with Jaspersoft Studio version 6.15.0.final using JasperReports Library version 6.15.0-dd49bfb94918336b8321d5507193f0169ead4e95  -->
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="PharmaceuticalOrder" pageWidth="595" pageHeight="842" whenNoDataType="NoPages" columnWidth="535" leftMargin="30" rightMargin="30" topMargin="20" bottomMargin="20" isFloatColumnFooter="true" resourceBundle="PharmaceuticalOrder" whenResourceMissingType="Key" uuid="c2ba327f-8236-47da-8bc7-e78075a71b3f">
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
 	<import value="net.sf.jasperreports.engine.*"/>
@@ -89,7 +89,7 @@ ORDER BY MDSR_DESC]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{Telephone}]]></textFieldExpression>
 			</textField>
-			<staticText>
+			<textField>
 				<reportElement key="staticText-8" x="0" y="70" width="39" height="20" uuid="e393a62b-7255-4731-805b-ad7511b3c0b7"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -100,8 +100,8 @@ ORDER BY MDSR_DESC]]>
 				<textElement verticalAlignment="Middle">
 					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Date:]]></text>
-			</staticText>
+				<textFieldExpression><![CDATA[$R{Date}+":"]]></textFieldExpression>
+			</textField>
 			<textField textAdjust="StretchHeight" pattern="dd/MM/yyyy h.mm a" isBlankWhenNull="false">
 				<reportElement key="textField-22" x="44" y="70" width="219" height="20" uuid="21827d5c-6d4c-4061-93be-22b1df9abe72"/>
 				<box>
@@ -122,7 +122,7 @@ ORDER BY MDSR_DESC]]>
 	</pageHeader>
 	<columnHeader>
 		<band height="30" splitType="Stretch">
-			<staticText>
+			<textField>
 				<reportElement key="staticText-2" x="0" y="11" width="52" height="19" uuid="87240942-9c70-4fd9-a508-8f356da56d9c"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -133,9 +133,9 @@ ORDER BY MDSR_DESC]]>
 				<textElement>
 					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Code]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA[$R{Code}]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement key="staticText-3" x="57" y="11" width="183" height="19" uuid="b305e4a9-e9f6-4ea7-be2e-71ea5070a113"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -146,9 +146,9 @@ ORDER BY MDSR_DESC]]>
 				<textElement>
 					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Item]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA[$R{Item}]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement key="staticText-4" x="245" y="11" width="71" height="19" uuid="a0e80a84-0330-4a93-8373-4bd8ddc1bcac"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -159,9 +159,9 @@ ORDER BY MDSR_DESC]]>
 				<textElement textAlignment="Center">
 					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[in Store]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA[$R{InStore}]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement key="staticText-5" x="321" y="11" width="88" height="19" uuid="8d3e4721-1082-4ee1-b719-8f6c825d1520"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -172,9 +172,9 @@ ORDER BY MDSR_DESC]]>
 				<textElement textAlignment="Center">
 					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Critcal Level]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA[$R{CriticalLevel}]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement key="staticText-6" x="414" y="11" width="57" height="19" uuid="ceec772e-7b84-40b6-832e-2229f9e56e6c"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -185,9 +185,9 @@ ORDER BY MDSR_DESC]]>
 				<textElement textAlignment="Right">
 					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Still]]></text>
-			</staticText>
-			<staticText>
+				<textFieldExpression><![CDATA[$R{Still}]]></textFieldExpression>
+			</textField>
+			<textField>
 				<reportElement key="staticText-9" x="478" y="11" width="57" height="19" uuid="11f2fbe8-1ab6-4c91-94cf-0af1cd9419cb"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -198,8 +198,8 @@ ORDER BY MDSR_DESC]]>
 				<textElement textAlignment="Right">
 					<font fontName="Arial" size="12" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Order]]></text>
-			</staticText>
+				<textFieldExpression><![CDATA[$R{Order}]]></textFieldExpression>
+			</textField>
 		</band>
 	</columnHeader>
 	<detail>
